--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="only screen" href="styles/style.css">
+
+    <link rel="stylesheet" media="only screen and (max-width: 600px)" href="styles/style-extra-small.css">
+    <link rel="stylesheet" media="only screen and (min-width: 600px)" href="styles/style-small.css">
+    <link rel="stylesheet" media="only screen and (min-width: 768px)" href="styles/style-medium.css">
+    <link rel="stylesheet" media="only screen and (min-width: 992px)" href="styles/style-large.css">
+    <link rel="stylesheet" media="only screen and (min-width: 992px)" href="styles/style-extra-large.css">
+
     <title>Title</title>
 </head>
 <body>
+
+<div id="container">
+
+<div id="container-bg">
+
+</div>
+</div>
 
 </body>
 </html>
