Opaque background, white foreground element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" media="only screen and (min-width: 600px)" href="styles/style-small.css">
     <link rel="stylesheet" media="only screen and (min-width: 768px)" href="styles/style-medium.css">
     <link rel="stylesheet" media="only screen and (min-width: 992px)" href="styles/style-large.css">
-    <link rel="stylesheet" media="only screen and (min-width: 992px)" href="styles/style-extra-large.css">
+    <link rel="stylesheet" media="only screen and (min-width: 1200px)" href="styles/style-extra-large.css">
 
     <title>Title</title>
 </head>
@@ -17,8 +17,15 @@
 
 <div id="container">
 
-    <div id="container-bg">
-    </div>
+
+    <div id="container-bg"></div>
+
+        <div class="price-container">
+            <div class="price-box"></div>
+            <div class="price-box"></div>
+            <div class="price-box"></div>
+        </div>
+
 
 </div>
 
