--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" media="only screen and (min-width: 992px)" href="styles/style-large.css">
     <link rel="stylesheet" media="only screen and (min-width: 1200px)" href="styles/style-extra-large.css">
 
-    <title>Title</title>
+    <title>Challange accepted</title>
 </head>
 <body>
 
@@ -21,9 +21,18 @@
     <div id="container-bg"></div>
 
         <div class="price-container">
-            <div class="price-box"></div>
-            <div class="price-box"></div>
-            <div class="price-box"></div>
+            <div class="price-box">
+                <h1 class="roboto price-title">PRO</h1>
+                <img src="images/icon-pro.svg" class="price-icon">
+            </div>
+            <div class="price-box">
+                <h1 class="roboto price-title">ULTIMATE</h1>
+                <img src="images/icon-ultimate.svg" class="price-icon">
+            </div>
+            <div class="price-box">
+                <h1 class="roboto price-title">NETWORK</h1>
+                <img src="images/icon-network.svg" class="price-icon">
+            </div>
         </div>
 
 
