Content + Price box

--- a/index.html
+++ b/index.html
@@ -20,18 +20,60 @@
 
     <div id="container-bg"></div>
 
-        <div class="price-container">
-            <div class="price-box">
-                <h1 class="roboto price-title">PRO</h1>
-                <img src="images/icon-pro.svg" class="price-icon">
+        <div class="package-container">
+            <div class="package-box">
+                <h1 class="roboto package-title">PRO</h1>
+                <img src="images/icon-pro.svg" class="package-icon">
+                <div class="package-content">
+                    <p>Advanced Affiliate Features</p>
+                    <p>Full Setup + Website Integration</p>
+                    <p>Rock-Solid Tracking</p>
+                    <p>Ideal for SMB/Startups</p>
+                    <p>Unlimited Affiliates</p>
+                    <p>1M tracking requests/month</p>
+                    <p>Support 365 Days a Year</p>
+                    <p>Free Lifetime Updates</p>
+                </div>
+                <div class="package-price-box">
+                    <p class="price"><span class="dollar">$</span>97</p>
+                    <p class="period">PER MONTH</p>
+                </div>
             </div>
-            <div class="price-box">
-                <h1 class="roboto price-title">ULTIMATE</h1>
-                <img src="images/icon-ultimate.svg" class="price-icon">
+            <div class="package-box">
+                <h1 class="roboto package-title">ULTIMATE</h1>
+                <img src="images/icon-ultimate.svg" class="package-icon">
+                <div class="package-content">
+                    <p>Full-Scale Affiliate Management</p>
+                    <p>Premium Setup + Website Integration</p>
+                    <p>Unlimited Affiliates</p>
+                    <p>5M tracking requests/month</p>
+                    <p>High Traffic Ready</p>
+                    <p>Multiple Administrators</p>
+                    <p>SEO Friendly</p>
+                    <p>Support 365 Days a Year</p>
+                    <p>Free Lifetime Updates</p>
+                </div>
+                <div class="package-price-box">
+                    <p class="price"><span class="dollar">$</span>197</p>
+                    <p class="period">PER MONTH</p>
+                </div>
             </div>
-            <div class="price-box">
-                <h1 class="roboto price-title">NETWORK</h1>
-                <img src="images/icon-network.svg" class="price-icon">
+            <div class="package-box">
+                <h1 class="roboto package-title">NETWORK</h1>
+                <img src="images/icon-network.svg" class="package-icon">
+                <div class="package-content">
+                    <p>Out of the Box Affiliate Network Software</p>
+                    <p>Unlimited Affiliates</p>
+                    <p>Unlimited Merchants</p>
+                    <p>20Mtracking requests/month</p>
+                    <p>Support 365 Days a Year</p>
+                    <p>Onboarding consultation service</p>
+                    <p>Free Lifetime Updates</p>
+                </div>
+                <div class="package-price-box">
+                    <p class="price"><span class="dollar">$</span>477</p>
+                    <p class="period">PER MONTH</p>
+                </div>
             </div>
         </div>
 
