Package floating action button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <p>Support 365 Days a Year</p>
                     <p>Free Lifetime Updates</p>
                 </div>
+                <div class="package-fab">
+                    <img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">
+                </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>97</p>
                     <p class="period">PER MONTH</p>
@@ -53,6 +56,9 @@
                     <p>Support 365 Days a Year</p>
                     <p>Free Lifetime Updates</p>
                 </div>
+                <div class="package-fab">
+                    <img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">
+                </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>197</p>
                     <p class="period">PER MONTH</p>
@@ -69,6 +75,9 @@
                     <p>Support 365 Days a Year</p>
                     <p>Onboarding consultation service</p>
                     <p>Free Lifetime Updates</p>
+                </div>
+                <div class="package-fab">
+                    <img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">
                 </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>477</p>
