Design extra large without svg color change

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 </head>
 <body>
 
+
+
 <div id="container">
 
 
     <div id="container-bg"></div>
-
+    <div id="container-main">
         <div class="package-container">
             <div class="package-box">
                 <h1 class="roboto package-title">PRO</h1>
@@ -88,6 +90,6 @@
 
 
 </div>
-
+</div>
 </body>
 </html>
