Design for extra large screens

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         <div class="package-container">
             <div class="package-box">
                 <h1 class="roboto package-title">PRO</h1>
-                <img src="images/icon-pro.svg" class="package-icon">
+
+                <span class="package-icon">
+                    <svg viewbox="0 0 60 60">
+                    <use xlink:href="images/icon-pro.svg#pro"></use>
+                </svg>
+                </span>
+
+                <!--<img src="images/icon-pro.svg" class="package-icon">-->
                 <div class="package-content">
                     <p>Advanced Affiliate Features</p>
                     <p>Full Setup + Website Integration</p>
@@ -37,7 +44,12 @@
                     <p>Free Lifetime Updates</p>
                 </div>
                 <div class="package-fab">
-                    <img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">
+                    <!-- <div class="package-cart-icon"></div>-->
+                    <span class="package-cart-icon">
+                    <svg viewbox="0 0 24 24">
+                    <use xlink:href="images/icon-cart.svg#cart"></use>
+                </svg>
+                    </span>
                 </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>97</p>
@@ -46,7 +58,12 @@
             </div>
             <div class="package-box">
                 <h1 class="roboto package-title">ULTIMATE</h1>
-                <img src="images/icon-ultimate.svg" class="package-icon">
+                <!--
+                <img src="images/icon-ultimate.svg" class="package-icon"> -->
+                <span class="package-icon">
+                    <svg viewBox="0 0 60 60">
+                    <use xlink:href="images/icon-ultimate.svg#ultimate"></use>
+                </svg></span>
                 <div class="package-content">
                     <p>Full-Scale Affiliate Management</p>
                     <p>Premium Setup + Website Integration</p>
@@ -59,7 +76,11 @@
                     <p>Free Lifetime Updates</p>
                 </div>
                 <div class="package-fab">
-                    <img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">
+                    <span class="package-cart-icon">
+                    <svg viewbox="0 0 24 24">
+                    <use xlink:href="images/icon-cart.svg#cart"></use>
+                </svg>
+                    </span>
                 </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>197</p>
@@ -68,7 +89,11 @@
             </div>
             <div class="package-box">
                 <h1 class="roboto package-title">NETWORK</h1>
-                <img src="images/icon-network.svg" class="package-icon">
+                <!--<img src="images/icon-network.svg" class="package-icon">-->
+                <span class="package-icon">
+                    <svg viewbox="0 0 60 60">
+                    <use xlink:href="images/icon-network.svg#network"></use>
+                </svg></span>
                 <div class="package-content">
                     <p>Out of the Box Affiliate Network Software</p>
                     <p>Unlimited Affiliates</p>
@@ -79,7 +104,12 @@
                     <p>Free Lifetime Updates</p>
                 </div>
                 <div class="package-fab">
-                    <img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">
+                    <span class="package-cart-icon">
+                    <svg viewbox="0 0 24 24">
+                    <use xlink:href="images/icon-cart.svg#cart"></use>
+                </svg>
+                    </span>
+                    <!--<img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">-->
                 </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>477</p>
