Design for medium screens

--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
                 </div>
                 <div class="package-fab">
                     <!-- <div class="package-cart-icon"></div>-->
-                    <span class="package-cart-icon">
+                    <a href="#">
+                      <span class="package-cart-icon">
                     <svg viewbox="0 0 24 24">
                     <use xlink:href="images/icon-cart.svg#cart"></use>
                 </svg>
                     </span>
+                    </a>
+
                 </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>97</p>
@@ -76,11 +79,13 @@
                     <p>Free Lifetime Updates</p>
                 </div>
                 <div class="package-fab">
+                    <a href="#">
                     <span class="package-cart-icon">
                     <svg viewbox="0 0 24 24">
                     <use xlink:href="images/icon-cart.svg#cart"></use>
                 </svg>
                     </span>
+                    </a>
                 </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>197</p>
@@ -90,10 +95,12 @@
             <div class="package-box">
                 <h1 class="roboto package-title">NETWORK</h1>
                 <!--<img src="images/icon-network.svg" class="package-icon">-->
+                <a href="#">
                 <span class="package-icon">
                     <svg viewbox="0 0 60 60">
                     <use xlink:href="images/icon-network.svg#network"></use>
                 </svg></span>
+                </a>
                 <div class="package-content">
                     <p>Out of the Box Affiliate Network Software</p>
                     <p>Unlimited Affiliates</p>
