Design for small screens

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1 class="roboto package-title">PRO</h1>
 
                 <span class="package-icon">
-                    <svg viewbox="0 0 60 60">
+                    <svg viewBox="0 0 60 60">
                     <use xlink:href="images/icon-pro.svg#pro"></use>
                 </svg>
                 </span>
@@ -47,7 +47,7 @@
                     <!-- <div class="package-cart-icon"></div>-->
                     <a href="#">
                       <span class="package-cart-icon">
-                    <svg viewbox="0 0 24 24">
+                    <svg viewBox="0 0 24 24">
                     <use xlink:href="images/icon-cart.svg#cart"></use>
                 </svg>
                     </span>
@@ -81,7 +81,7 @@
                 <div class="package-fab">
                     <a href="#">
                     <span class="package-cart-icon">
-                    <svg viewbox="0 0 24 24">
+                    <svg viewBox="0 0 24 24">
                     <use xlink:href="images/icon-cart.svg#cart"></use>
                 </svg>
                     </span>
