--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                 </svg>
                 </span>
 
-                <!--<img src="images/icon-pro.svg" class="package-icon">-->
                 <div class="package-content">
                     <p>Advanced Affiliate Features</p>
                     <p>Full Setup + Website Integration</p>
@@ -44,7 +43,6 @@
                     <p>Free Lifetime Updates</p>
                 </div>
                 <div class="package-fab">
-                    <!-- <div class="package-cart-icon"></div>-->
                     <a href="#">
                       <span class="package-cart-icon">
                     <svg viewBox="0 0 24 24">
@@ -61,12 +59,13 @@
             </div>
             <div class="package-box">
                 <h1 class="roboto package-title">ULTIMATE</h1>
-                <!--
-                <img src="images/icon-ultimate.svg" class="package-icon"> -->
                 <span class="package-icon">
                     <svg viewBox="0 0 60 60">
-                    <use xlink:href="images/icon-ultimate.svg#ultimate"></use>
-                </svg></span>
+                        <use xlink:href="images/icon-ultimate.svg#ultimate">
+
+                        </use>
+                </svg>
+                </span>
                 <div class="package-content">
                     <p>Full-Scale Affiliate Management</p>
                     <p>Premium Setup + Website Integration</p>
@@ -94,7 +93,6 @@
             </div>
             <div class="package-box">
                 <h1 class="roboto package-title">NETWORK</h1>
-                <!--<img src="images/icon-network.svg" class="package-icon">-->
                 <a href="#">
                 <span class="package-icon">
                     <svg viewbox="0 0 60 60">
@@ -116,7 +114,6 @@
                     <use xlink:href="images/icon-cart.svg#cart"></use>
                 </svg>
                     </span>
-                    <!--<img src="images/icon-cart.svg" alt="Add to cart" class="package-cart-icon">-->
                 </div>
                 <div class="package-price-box">
                     <p class="price"><span class="dollar">$</span>477</p>
